@@ -25,14 +25,6 @@ public class UserAdapter extends AbstractUserAdapterFederatedStorage {
         keycloakId = StorageId.keycloakId(model, entity.getId());
     }
 
-    public String getPassword() {
-        return entity.getPassword();
-    }
-
-    public void setPassword(String password) {
-        entity.setPassword(password);
-    }
-
     @Override
     public String getUsername() {
         return entity.getUsername();
@@ -61,38 +53,48 @@ public class UserAdapter extends AbstractUserAdapterFederatedStorage {
 
     @Override
     public void setSingleAttribute(String name, String value) {
-        if (name.equals("phone")) {
-            entity.setPhone(value);
-        } else {
-            super.setSingleAttribute(name, value);
+        switch (name) {
+            case "phone" -> entity.setPhone(value);
+            case "email" -> entity.setEmail(value);
+            case "firstName" -> entity.setFirstName(value);
+            case "lastName" -> entity.setLastName(value);
+            default -> super.setSingleAttribute(name, value);
         }
     }
 
     @Override
     public void removeAttribute(String name) {
-        if (name.equals("phone")) {
-            entity.setPhone(null);
-        } else {
-            super.removeAttribute(name);
+        switch (name) {
+            case "phone" -> entity.setPhone(null);
+            case "email" -> entity.setEmail(null);
+            case "firstName" -> entity.setFirstName(null);
+            case "lastName" -> entity.setLastName(null);
+            default -> super.removeAttribute(name);
         }
     }
 
     @Override
     public void setAttribute(String name, List<String> values) {
-        if (name.equals("phone")) {
-            entity.setPhone(values.get(0));
-        } else {
-            super.setAttribute(name, values);
+        switch (name) {
+            case "phone" -> entity.setPhone(values.getFirst());
+            case "email" -> entity.setEmail(values.getFirst());
+            case "firstName" -> entity.setFirstName(values.getFirst());
+            case "lastName" -> entity.setLastName(values.getFirst());
+            default -> super.setAttribute(name, values);
         }
     }
 
     @Override
     public String getFirstAttribute(String name) {
-        if (name.equals("phone")) {
-            return entity.getPhone();
-        } else {
-            return super.getFirstAttribute(name);
+        String result = null;
+        switch (name) {
+            case "phone" -> result = entity.getPhone();
+            case "email" -> result = entity.getEmail();
+            case "firstName" -> result = entity.getFirstName();
+            case "lastName" -> result = entity.getLastName();
+            default -> result = super.getFirstAttribute(name);
         }
+        return result;
     }
 
     @Override
@@ -101,17 +103,38 @@ public class UserAdapter extends AbstractUserAdapterFederatedStorage {
         MultivaluedHashMap<String, String> all = new MultivaluedHashMap<>();
         all.putAll(attrs);
         all.add("phone", entity.getPhone());
+        all.add("email", entity.getEmail());
+        all.add("firstName", entity.getFirstName());
+        all.add("lastName", entity.getLastName());
         return all;
     }
 
     @Override
     public Stream<String> getAttributeStream(String name) {
-        if (name.equals("phone")) {
-            List<String> phone = new LinkedList<>();
-            phone.add(entity.getPhone());
-            return phone.stream();
-        } else {
-            return super.getAttributeStream(name);
+        switch (name) {
+            case "phone" -> {
+                List<String> phone = new LinkedList<>();
+                phone.add(entity.getPhone());
+                return phone.stream();
+            }
+            case "email" -> {
+                List<String> email = new LinkedList<>();
+                email.add(entity.getEmail());
+                return email.stream();
+            }
+            case "firstName" -> {
+                List<String> firstName = new LinkedList<>();
+                firstName.add(entity.getFirstName());
+                return firstName.stream();
+            }
+            case "lastName" -> {
+                List<String> lastName = new LinkedList<>();
+                lastName.add(entity.getLastName());
+                return lastName.stream();
+            }
+            default -> {
+                return super.getAttributeStream(name);
+            }
         }
     }
 }
